TODO: 
TODO: 9:55 <Wolf_on_Air> not much to document, it needs 
TODO: 9:55 <Wolf_on_Air> URxvt.keysym.M-c:                       perl:clipboard:copy
TODO: 9:55 <Wolf_on_Air> URxvt.keysym.M-v:                       perl:clipboard:paste
TODO: http://triplefusion.net/system/macosx-clipboard
8.
	- secondaryScroll is now enable by default (as per the manpage),
          reported by exg.

8.0  Thu Nov  2 18:35:19 CET 2006
	- combining characters cleared the area instead of creating an overlay,
          thus losing the ability to draw combining characters properly in most
          circumstances (reported by exg).
	- specified fonts were incorrectly morphed to bold/italic according to the
          basefont, even if explicitly specified (tracked down by tpope).
        - fixed urxvt::strwidth to calculate width in the same way as screen.C.
	- fix a crash caused by passing negative widths to overlay functions.
	- added 'matcher' extension by tpope, replacing the mark-urls extension.
        - improve url regex to match anything www.* (tpope).
        - fixed bug with outline cursor color being wrong after xft fonts.
        - update to libptytty-1.0.
	- give proper diagnostic when RXVT_SOCKET is too long instead of
          corrupting the stack (patch by exg).
        - display current terminal locale in option menu.
        - urxvtd no longer crashes when the client sends an inaccessible
          working directory (reported by Roland Baer, possibly fixes gentoo
          bug #143985).
        - fixed many minor issues reported by Roland Baer.
        - Leonid Khramov spotted a minor glitch in rxvtfont.C that
          should not have any consequences, but was buggy nonetheless.
        - manpage fix by exg.

7.9  Mon Aug  7 18:16:07 CEST 2006
        - fix the crashing bug people encountered with 7.8 + urxvtd + perl
          + transparency. Ought to fix debian bug #380348.
	- fix urxvtc.1.pod: it actually claimed -pty-fd would not work. But
          it does! :->